# kiwaku

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS  LICENSE  LICENSE.md  README.md  about.html  annotated.html  annotated_dup.js  appveyor.yml  changelog.html  classes.html  color.css  conceptkwk_1_1callable.html  conceptkwk_1_1concepts_1_1allocator.html  conceptkwk_1_1concepts_1_1axis.html  conceptkwk_1_1concepts_1_1basic__container.html  conceptkwk_1_1concepts_1_1category.html  conceptkwk_1_1concepts_1_1container.html  conceptkwk_1_1concepts_1_1contiguous__range.html  conceptkwk_1_1concepts_1_1contiguous__static__range.html  conceptkwk_1_1concepts_1_1descriptor.html  conceptkwk_1_1concepts_1_1dynamic__axis.html  conceptkwk_1_1concepts_1_1extent.html  conceptkwk_1_1concepts_1_1has__static__size.html  conceptkwk_1_1concepts_1_1joker.html  conceptkwk_1_1concepts_1_1named__extent.html  conceptkwk_1_1concepts_1_1numeric__extent.html  conceptkwk_1_1concepts_1_1pointer.html  conceptkwk_1_1concepts_1_1range.html  conceptkwk_1_1concepts_1_1slicer.html  conceptkwk_1_1concepts_1_1static__axis.html  conceptkwk_1_1concepts_1_1table.html  conceptkwk_1_1concepts_1_1unit__slicer.html  conceptkwk_1_1concepts_1_1view.html  conceptkwk_1_1deferred__callable.html  conceptkwk_1_1tag__invocable.html  (+198 more)
.circleci/: config.yml  (+2 more)
benchmark/bandwidth/babelstream/: Benchmark_double.csv  Benchmark_float.csv  CMakeLists.txt  babelstream.cpp  babelstream.hpp  babelstream_kwk.cpp  babelstream_kwk.hpp  babelstream_standalone.cpp  babelstream_standalone.hpp  plot.py  plot_compare.py
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  DoxygenLayout.xml  base.html  changelog.md  changes.md  color.css  conf.py.in  doxystrap-header.html  doxystrap.css  doxystrap.js  filter.py  filter.sh  glossary.md  godbolt.js  howto.rst  index.hpp  index.md  index.rst  install.rst  layout.xml  licence.md  license.md  options.hpp  page01_info.md  page02_tutorials.md  page09_rationale.md  page10_changes.md  page10_license.md  rationale.md  reference.rst  setup.hpp  setup.md
doc/_static/css/: custom.css
doc/rationale/: glossary.md  indexing.md
doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  concepts_0.js  concepts_1.js  concepts_2.js  concepts_3.js  concepts_4.js  concepts_5.js  concepts_6.js  concepts_7.js  concepts_8.js  concepts_9.js  concepts_a.js  (+41 more)
doc/tutorial/: tut01-basic.hpp  tut01-basic.md
test/: CMakeLists.txt  test.hpp  tts.hpp
test/algorithm/algos/: binary_search.cpp  context.cpp  copy.cpp  find.cpp  for_each.cpp  generator.cpp  numeric.cpp  position.cpp  predicates.cpp  reduce.cpp  replace.cpp  transform.cpp  transform.hpp
test/algorithms/: for_each.cpp
test/allocator/: CMakeLists.txt  allocator.cpp  heap.cpp  shallow.cpp  stack.cpp
test/bench/: find_1d.cpp  numeric_1d.cpp  reduce_1d.cpp  reduce_1d_custom.cpp  transform_reduce_1d.cpp
test/bench/include/: benchmark.hpp  benchmark_nano.hpp  nanobench.h
test/bench/nanob/: find_1d.cpp  transform_reduce_1d.cpp
test/bench/old/: reduce_1d_vtest.cpp
test/bench/plot/: plot_bench.py  plot_bench_2025-06-04.py  render_all_files.sh
test/components/: CMakeLists.txt  slicer.cpp
test/components/shape/: CMakeLists.txt  as_stride.cpp  compare.cpp  contain.cpp  convert.cpp  ctor.cpp  mixed.cpp  of_shape.cpp  properties.cpp  shape.hpp  strictly_contain.cpp  swap.cpp  tuple.cpp
test/components/slicer/: CMakeLists.txt  concept.cpp
test/components/stride/: CMakeLists.txt  ctor.cpp  from_shape.cpp  indexing.cpp  unit_indexing.cpp  with_stride.cpp
test/concepts/: CMakeLists.txt  allocator.cpp  container.cpp  extent.cpp
test/container/: CMakeLists.txt  static.1d.cpp
test/container/array/: CMakeLists.txt  dynamic.1d.cpp  dynamic.2d.cpp  sandbox.cpp  static.1d.cpp  static.2d.cpp  static.3d.cpp  static.4d.cpp
test/container/shape/: CMakeLists.txt  as_array.cpp  as_stride.cpp  compare.cpp  contain.cpp  convert.cpp  ctor.cpp  joker.cpp  mixed.cpp  of_shape.cpp  properties.cpp  shape.hpp  strictly_contain.cpp  swap.cpp  tuple.cpp
test/container/stride/: CMakeLists.txt  ctor.cpp  indexing.cpp  unit_indexing.cpp
test/container/table/: CMakeLists.txt  dynamic.1d.cpp  dynamic.2d.cpp  dynamic.3d.cpp  dynamic.4d.cpp  slicing.cpp  static.1d.cpp  static.2d.cpp  static.3d.cpp  static.4d.cpp
test/container/utility/: CMakeLists.txt  linear_index.cpp
test/container/view/: CMakeLists.txt  dynamic.1d.cpp  dynamic.2d.cpp  dynamic.3d.cpp  dynamic.4d.cpp  dynamic_empty.1d.cpp  static.1d.cpp  static.2d.cpp  static.3d.cpp  static.4d.cpp
test/deprecated/bench_old/: 1d.cpp
test/deprecated/eve_temp/: find_1d.cpp
test/deprecated/nanob/: reduce_1d.cpp
test/deprecated/temporarily_disabled/: context.cpp
test/doc/tutorial/: tutorial-01-label.cpp
test/docs/: CMakeLists.txt
test/docs/algorithms/: for_each_shape.cpp
test/docs/shape/: compatible.cpp  mixed.cpp  named_axis.cpp  numerical_axis.cpp  odd_sized.cpp
test/docs/tutorial/: tutorial-01.cpp
test/integration/: CMakeLists.txt  main.cpp
test/integration/cpm-test/: CMakeLists.txt
test/integration/fetch-test/: CMakeLists.txt
test/integration/install-test/: CMakeLists.txt
test/misc/: CMakeLists.txt
test/misc/shape/: CMakeLists.txt  as_stride.cpp  compare.cpp  contain.cpp  convert.cpp  ctor.cpp  default.cpp  experimental.cpp  ndims.cpp  numel.cpp  of_shape.cpp  partial.cpp  reshaping.cpp  shape.hpp  strictly_contain.cpp  swap.cpp  tuple.cpp
test/misc/slicer/: CMakeLists.txt  concept.cpp
test/misc/stride/: CMakeLists.txt  ctor.cpp  from_shape.cpp  index.cpp  indexing.cpp  unit_indexing.cpp  value_ctor.cpp  with_stride.cpp
test/old/: test.hpp
test/sycl_sandbox/: proxy_poc_axpy_bench.cpp  proxy_poc_axpy_bench_info.md
test/utility/: CMakeLists.txt  allocator.cpp  fixed.cpp  heap.cpp
(+1473 files in other folders)
