##==================================================================================================
##  KIWAKU - Containers Well Made
##  Copyright : KIWAKU Contributors & Maintainers
##  SPDX-License-Identifier: MIT
##==================================================================================================
include(make_unit)

add_subdirectory(allocator)
add_subdirectory(utility)
add_subdirectory(container)
