##==================================================================================================
##  KIWAKU - Containers Well Made
##  Copyright : KIWAKU Contributors & Maintainers
##  SPDX-License-Identifier: MIT
##==================================================================================================
add_subdirectory(shape)
add_subdirectory(stride)
# add_subdirectory(slicer)
