##==================================================================================================
##  KIWAKU - Containers Well Made
##  Copyright : KIWAKU Contributors & Maintainers
##  SPDX-License-Identifier: BSL-1.0
##==================================================================================================
add_subdirectory(shape)
add_subdirectory(stride)
add_subdirectory(table)
add_subdirectory(utility)
add_subdirectory(view)
