##==================================================================================================
##  KIWAKU - Containers Well Made
##  Copyright : KIWAKU Contributors & Maintainers
##  SPDX-License-Identifier: BSL-1.0
##==================================================================================================
set ( SOURCES
      fixed.cpp
    )

#make_unit("utility" ${SOURCES})

add_subdirectory(memory)
