##==================================================================================================
##  KIWAKU - Containers Well Made
##  Copyright : KIWAKU Contributors & Maintainers
##  SPDX-License-Identifier: BSL-1.0
##==================================================================================================
add_subdirectory(memory)
add_subdirectory(meta)
add_subdirectory(shape)
add_subdirectory(stride)
